Implemented the hold feature